# data-ai-engineer

./: .gitignore  PLAN_REFERENCE.md  README.md  pyproject.toml
week_01_raw_api_combat/: mission_1_first_swing.py  mission_2_tool_schemas.py  mission_3_tool_loop.py
week_02_stream_catcher/: config.py  mission_1_hyperdrive_stream.py  mission_2_relay_station.py  mission_3_kyber_crystal_assembly.py  sw_tools.py
week_02_stream_catcher/static/: index.html
